--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
           <p class="hero__content animate__animated animate__slideInUp">
             Nesta página, eu demonstro minhas habilidades de resolver problemas
             de negócio utilizando conceitos e ferramentas de Ciência de dados,
-            através de projetos com dados públicos.
+            através de projetos com dados públicos. 
+            <br>(Portfólio em constante evolução.)
           </p>
           <div class="footer__social"></div>
           <ul class="social animate__animated animate__slideInLeft">
@@ -128,9 +129,9 @@
               <h3 class="portfolio__title">Loyalty Program Creation</h3>
               <p class="portfolio__content">
                 A equipe de negócios solicitou aos cientistas de dados que procedessem com a seleção 
-                dos clientes mais estratégicos para a empresa. Para tal, foram consideradas as 
-                características fundamentais de recência, frequência e aspectos monetários, que seriam 
-                utilizadas para a avaliação e segmentação dos clientes em clusters.
+                dos clientes mais estratégicos para a empresa. Para tal, foram consideradas as características
+                fundamentais de recência, frequência e aspectos monetários, que seriam utilizadas para 
+                a avaliação e segmentação dos clientes em clusters.
               </p>
               <a class="portfolio__link" href="https://github.com/joaomrcs/loyalty_program_creation/blob/main/clustering_c9_deploy.ipynb" target="_blank">
                 <i class="bi bi-arrow-up-right-circle-fill"></i>
@@ -185,14 +186,19 @@
         <div class="about">
           <h4 class="about__intro">👋 Olá, me chamo João Marcos!</h4>
           <p class="about__bio">
-            Graduado em Análise e Desenvolvimento de Sistemas, desempenhei como Analista de Dados no mercado 
-            financeiro. Realizando análises e interpretação de dados, produzindo relatórios para a 
-            área comercial. Além disso, estou envolvido em projetos pessoais de Ciência de Dados 
-            para aprimorar minhas habilidades na resolução de problemas de negócios e no uso de 
-            ferramentas de análise de dados. Busco constantemente me aperfeiçoar nessa área 
-            estratégica, contribuindo para o crescimento dos projetos relacionados à Ciência de Dados.
+            <br>
+            Bem-vindo(a) ao meu universo analítico! Sou graduado em Análise e Desenvolvimento de Sistemas, 
+            e minha jornada na Ciência de Dados tem sido uma fascinante exploração no mercado financeiro, 
+            onde desempenhei um papel fundamental como Analista de Dados(fugindo um pouco da rota). Imerso nesse mundo de infinitas 
+            possibilidades, meu foco era desvendar os mistérios dos dados e transformá-los em insights valiosos 
+            que impulsionam a área comercial. Através de análises minuciosas e interpretações perspicazes, 
+            produzi relatórios estratégicos que alimentam decisões informadas e potencializam o crescimento 
+            dos negócios. No momento, estou em um capítulo importantíssimo da minha jornada como 
+            Cientista de Dados. Vivendo a experiência de ser um Apprenticeship na Comunidade DS, desfrutando 
+            das infinitas possibilidades que a Ciência de Dados oferece, abraçando novas ferramentas, técnicas e 
+            metodologias.  Cada passo nesta trajetória me aproxima de minha visão visionária de usar os dados como 
+            uma força motriz para soluções inteligentes e estratégicas.
           </p>
-          <br>
         </div>
       </div>
     </section>
@@ -279,7 +285,7 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    Quem sabe iniciar como DataOps JR na SPRO IT Solutions? rs
+                    Quem sabe iniciar um novo ciclo profissional na empresa que vos fala? rs
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
@@ -294,7 +300,7 @@
                   </span>
                   <p class="testimonials__quotes">
                     Profissional responsável pelos dados na área comercial do Banco Carrefour,
-                    realizando a extração de dados via MicroStrategy para atualização das bases de dados, 
+                    realizando o ETL completo para atualização das bases de dados, 
                     query's diárias em SQL para obter informações específicas solicitadas pelo time de parcerias,
                     report's semanais/mensais para a diretoria e criação de dashboard's utilizando
                     o Power BI.
