--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h1 class="header__logo">
             <a href="/">
               <span>João</span>
-              <span>Marcos</span>
+              <span>Almeida</span>
             </a>
           </h1>
 
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="hero__wrapper">
           <div class="hero__img">
-            <img src="assets/profile.jpeg" alt="Profile Picture" />
+            <img src="assets/profile.png" alt="Profile Picture" />
           </div>
           <h1 class="hero__title animate__animated animate__slideInUp">
             Seja bem-vindo ao meu portfólio<br />
@@ -184,21 +184,10 @@
           <p class="section__subtitle">Apresentação</p>
         </div>
         <div class="about">
-          <h4 class="about__intro">👋 Olá, me chamo João Marcos!</h4>
+          <h4 class="about__intro">👋 Olá, me chamo João!</h4>
           <p class="about__bio">
             <br>
-            Bem-vindo(a) ao meu universo analítico! Sou graduado em Análise e Desenvolvimento de Sistemas, 
-            e minha jornada na Ciência de Dados tem sido uma fascinante exploração no mercado financeiro, 
-            onde desempenhei um papel fundamental como Analista de Dados(fugindo um pouco da rota). Imerso nesse mundo de infinitas 
-            possibilidades, meu foco era desvendar os mistérios dos dados e transformá-los em insights valiosos 
-            que impulsionam a área comercial. Através de análises minuciosas e interpretações perspicazes, 
-            produzi relatórios estratégicos que alimentam decisões informadas e potencializam o crescimento 
-            dos negócios. No momento, estou em um capítulo importantíssimo da minha jornada como 
-            Cientista de Dados. Vivendo a experiência de ser um Apprenticeship na Comunidade DS, desfrutando 
-            das infinitas possibilidades que a Ciência de Dados oferece, abraçando novas ferramentas, técnicas e 
-            metodologias.  Cada passo nesta trajetória me aproxima de minha visão visionária de usar os dados como 
-            uma força motriz para soluções inteligentes e estratégicas.
-          </p>
+            Bem-vindo(a) ao meu universo analítico! Software engineer e também profissional de dados com alta capacidade analítica e conhecimento de probabilidade e estatística, modelos preditivos, inferência, machine learning e domínio das linguagens Python, R e SQL. Atuei na área de dados em empresas de tecnologia e executei diversos modelos incluindo modelos de recomendação, propensão, scripts, precificação, classificação, clustering, entre outros. Sou formada em Análise e desenvolvimento de sistemas pela FIAP e atualmente estou no segundo período de Ciência de dados pela Estácio. Para mais detalhamento das minhas habilidades, abaixo tem tudo detalhado. :)
         </div>
       </div>
     </section>
@@ -217,16 +206,16 @@
           <h4 class="about__skillsTitle">Linguagens de Programação e Banco de Dados</h4>
           <ul>
           <!--<ul class="about__skillsList"> -->
-            <li>Python com foco em análise de dados.</li>
-            <li>Web scraping com Python.</li>
+            <li>Python com foco em análise de dados e web scraping.</li>
+            <li>Java, Javascript, HTML e CSS para desenv.</li>
             <li>SQL para extração de dados.</li>
-            <li>Banco de Dados: SQLite, MySQL, Oracle, e MongoDB.</li>
+            <li>Banco de dados: SQLite, MySQL, Oracle e MongoDB.</li>
           </ul>
           <br>
           <br>
           <h4 class="about__skillsTitle">Estatística e Machine Learning</h4>
           <ul>
-            <li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade).</li>
+            <li>Estatísticas descritivas (location, dispersion, asymmetry, kurtosis, density).</li>
             <li>Algoritmos de regressão, classificação e clusterização.</li>
             <li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Confusion Matrix,
               Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score e DB-Index).</li>
@@ -243,9 +232,10 @@
           <br>
           <h4 class="about__skillsTitle">Engenharia de Software</h4>
           <ul>
-            <li>Git, Github, Gitlab, Virtual Environment e Docker.</li>
-            <li>Flask.</li>
+            <li>Bibliotecas Python: Selenium, PyAutoGUI e Beautiful Soup.</li>
+            <li>Git, Github, Gitlab e Docker.</li>
             <li>Cloud: Microsoft Azure.</li>
+            <li>Outras ferramentas: Pacote office c/especialidade em Excel.</li>
           </ul>
         </div>
       </div>
@@ -256,7 +246,6 @@
       <div class="section" id="testimonials">
         <div class="section__header section__header--center">
           <h2 class="section__title">Experiências profissionais </h2>
-          <p class="section__subtitle">Principais</p>
         </div>
         <div class="testimonials">
           <div class="splide">
@@ -267,16 +256,12 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    Construção de soluções de dados para problemas de negócio, próximos dos desafios
-                    reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
-                    onde eu abordei o problema desde a concepção do desafio de negócio até a
-                    publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
-                    Computing.
+                    Atuando como desenvolvedor em uma empresa de destaque no desenvolvimento de soluções de inteligência artificial e web scraping, minha atuação é pautada pela excelência técnica, criatividade e visão estratégica. Com uma vasta experiência na concepção, desenvolvimento e implementação de soluções inovadoras, meu papel abrange desde a criação até o gerenciamento e a evolução contínua dos projetos.
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
-                      <h4>3+ projetos</h4>
-                      <p>Direcionados para Ciência de dados</p>
+                      <h4>Software engineer</h4>
+                      <p>Lemod Soluções (Atual)</p>
                     </div>
                   </div>
                 </div>
@@ -285,12 +270,12 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    Quem sabe iniciar um novo ciclo profissional na empresa que vos fala? rs
+                    Como Cientista de dados APS em ambiente produtivo, participei e implementei de forma autonoma projetos de machine learning de ponta a ponta, desde a preparação de dados até o deployment, sempre focado na excelência técnica e inovação.
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
-                      <h4>Próximo job</h4>
-                      <p>...</p>
+                      <h4>Data Scientist</h4>
+                      <p>Comunidade DS</p>
                     </div>
                   </div>
                 </div>
@@ -299,16 +284,15 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    Profissional responsável pelos dados na área comercial do Banco Carrefour,
-                    realizando o ETL completo para atualização das bases de dados, 
-                    query's diárias em SQL para obter informações específicas solicitadas pelo time de parcerias,
-                    report's semanais/mensais para a diretoria e criação de dashboard's utilizando
-                    o Power BI.
+                    O profissional encarregado da gestão de dados dentro do âmbito de parcerias no Grupo Carrefour Brasil,
+                    realizando o ETL completo para atualização das bases de dados, query's diárias em SQL para obter 
+                    informações específicas solicitadas pelo time de parcerias, report's semanais/mensais para a diretoria 
+                    e criação de dashboard's utilizando o Power BI.
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
-                      <h4>1+ Ano</h4>
-                      <p>Analista de dados</p>
+                      <h4>Data Analyst</h4>
+                      <p>Grupo Carrefour Brasil</p>
                     </div>
                   </div>
                 </div>
@@ -328,7 +312,7 @@
         <div class="footer__social">
           <ul class="social">
             <li>
-              <a href="https://www.linkedin.com/in/joaomrcs/" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/joaualmeida/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </li>
             <li>
               <a href="https://github.com/joaomrcs" target="_blank"><i class="bi bi-github"></i></a>
