--- a/index.html
+++ b/index.html
@@ -284,15 +284,15 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    O profissional encarregado da gestão de dados dentro do âmbito de parcerias no Grupo Carrefour Brasil,
+                    Estagiário encarregado da gestão de dados dentro do âmbito de parcerias no Banco carrefour,
                     realizando o ETL completo para atualização das bases de dados, query's diárias em SQL para obter 
                     informações específicas solicitadas pelo time de parcerias, report's semanais/mensais para a diretoria 
                     e criação de dashboard's utilizando o Power BI.
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
-                      <h4>Data Analyst</h4>
-                      <p>Grupo Carrefour Brasil</p>
+                      <h4>Analytics internship</h4>
+                      <p>Banco Carrefour</p>
                     </div>
                   </div>
                 </div>
